# serializer version: 1
# name: test_switch_state_snapshot[ed][time.water_drinking_appliance_regeneration_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': None,
    'entity_id': 'time.water_drinking_appliance_regeneration_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Regeneration time',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Regeneration time',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'timing_regeneration',
    'unique_id': '12345678_timing_regeneration',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[ed][time.water_drinking_appliance_regeneration_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Water Drinking Appliance Regeneration time',
    }),
    'context': <ANY>,
    'entity_id': 'time.water_drinking_appliance_regeneration_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10:14:00',
  })
# ---
# name: test_switch_state_snapshot[ed_invalid_hour][time.water_drinking_appliance_regeneration_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': None,
    'entity_id': 'time.water_drinking_appliance_regeneration_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Regeneration time',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Regeneration time',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'timing_regeneration',
    'unique_id': '12345678_timing_regeneration',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[ed_invalid_hour][time.water_drinking_appliance_regeneration_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Water Drinking Appliance Regeneration time',
    }),
    'context': <ANY>,
    'entity_id': 'time.water_drinking_appliance_regeneration_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_switch_state_snapshot[ed_invalid_minute][time.water_drinking_appliance_regeneration_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': None,
    'entity_id': 'time.water_drinking_appliance_regeneration_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Regeneration time',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Regeneration time',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'timing_regeneration',
    'unique_id': '12345678_timing_regeneration',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[ed_invalid_minute][time.water_drinking_appliance_regeneration_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Water Drinking Appliance Regeneration time',
    }),
    'context': <ANY>,
    'entity_id': 'time.water_drinking_appliance_regeneration_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_switch_state_snapshot[ed_negative_hour][time.water_drinking_appliance_regeneration_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': None,
    'entity_id': 'time.water_drinking_appliance_regeneration_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Regeneration time',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Regeneration time',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'timing_regeneration',
    'unique_id': '12345678_timing_regeneration',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[ed_negative_hour][time.water_drinking_appliance_regeneration_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Water Drinking Appliance Regeneration time',
    }),
    'context': <ANY>,
    'entity_id': 'time.water_drinking_appliance_regeneration_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_switch_state_snapshot[ed_negative_minute][time.water_drinking_appliance_regeneration_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': None,
    'entity_id': 'time.water_drinking_appliance_regeneration_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Regeneration time',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Regeneration time',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'timing_regeneration',
    'unique_id': '12345678_timing_regeneration',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[ed_negative_minute][time.water_drinking_appliance_regeneration_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Water Drinking Appliance Regeneration time',
    }),
    'context': <ANY>,
    'entity_id': 'time.water_drinking_appliance_regeneration_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_switch_state_snapshot[ed_none_hour][time.water_drinking_appliance_regeneration_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': None,
    'entity_id': 'time.water_drinking_appliance_regeneration_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Regeneration time',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Regeneration time',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'timing_regeneration',
    'unique_id': '12345678_timing_regeneration',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[ed_none_hour][time.water_drinking_appliance_regeneration_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Water Drinking Appliance Regeneration time',
    }),
    'context': <ANY>,
    'entity_id': 'time.water_drinking_appliance_regeneration_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_switch_state_snapshot[ed_none_minute][time.water_drinking_appliance_regeneration_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': None,
    'entity_id': 'time.water_drinking_appliance_regeneration_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Regeneration time',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Regeneration time',
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'timing_regeneration',
    'unique_id': '12345678_timing_regeneration',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_state_snapshot[ed_none_minute][time.water_drinking_appliance_regeneration_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Water Drinking Appliance Regeneration time',
    }),
    'context': <ANY>,
    'entity_id': 'time.water_drinking_appliance_regeneration_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
